--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 before_install:
   - docker build -t spaci1010/docker-react -f Dockerfile.dev .
 script:
-  - docker run spaci1010/docker-react npm run test -- --coverage
+  - docker run -e CI=true spaci1010/docker-react npm run test --coverage
