--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,15 @@ before_install:
   - docker build -t spaci1010/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true spaci1010/docker-react npm run test --coverage
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react1"
+  env: "DockerReact-env1"
+  bucket_name: "elasticbeanstalk-us-east-2-122760036395"
+  bucket_path: "docker-react1"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
